--- a/README
+++ b/README
@@ -7,3 +7,6 @@ WEBSITE: https://github.com/errantlinguist/PyListTree
 
 LICENSING:
 Copyright 2011-2012 Todd Shore. Distributed under the Apache License 2.0 -- See the files "NOTICE" and "LICENSE".
+
+REQUIREMENTS:
+- Python 2.7.x
