Added requirements to readme

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-PyListTree
+PyTree
 A list-derived tree data structure library for Python.
 ------------------------------------------------------------------------
 VERSION: 2012-02-01
